# PRO-LAB

./: .gitignore  OPEN-PROLAB.url  README.md  task.md
ProbRob_Paper_Template_Englisch/: ProbRobPaperTemplateWS2022.aux  ProbRobPaperTemplateWS2022.bbl  ProbRobPaperTemplateWS2022.blg  ProbRobPaperTemplateWS2022.fdb_latexmk  ProbRobPaperTemplateWS2022.fls  ProbRobPaperTemplateWS2022.tex  build.sh  paper.tex  refs.bib
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  foxglove_init.sh
docs/: evaluation_overview.md  presentation_outline.md  wrong_init_experiment.md  wrong_init_run_protocol.md
scripts/: analyze_results.py  copy_fav_plots.sh  extract_gz_assets.sh  plot_fusion_demo.py  prolab.sh  run_experiments.sh  run_gazebo_native.sh  run_single.sh  save_layout.ps1  start_all.ps1  start_all.sh  test_alignment.sh
webxr-bonus/: README.md  setup-quest-access.ps1
webxr-bonus/bridge/: particle_sampler.py
webxr-bonus/docker/: Dockerfile  build_mir_glb.py  build_taurob_glb.py  build_tb3_glb.py  build_tb4_glb.py  docker-compose.yml  entrypoint.sh  nginx.conf
webxr-bonus/scripts/: chrome-debug.ps1  debug-chrome.ps1
webxr-bonus/web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
webxr-bonus/web/src/: App.tsx  index.css  main.tsx
webxr-bonus/web/src/components/: AmclRunner.tsx  DemoOverlay.tsx  FloorTiles.tsx  HUD.tsx  LaserScan.tsx  MetaStyleHands.tsx  ParticleCloud.tsx  PlaneOutlines.tsx  PoseArrow.tsx  Robot.tsx  Scene.tsx
webxr-bonus/web/src/components/ui/: button.tsx  card.tsx  slider.tsx  switch.tsx
webxr-bonus/web/src/lib/: amcl.ts  demo.ts  floor.ts  ros.ts  store.ts  utils.ts
ws/src/pro_lab_filters/: CMakeLists.txt  package.xml  rviz_plugins.xml
ws/src/pro_lab_filters/config/: depot.sdf  foxglove_layout.json  gz_bridge.yaml  landmark_post.sdf  landmarks.yaml  wrong_init.rviz
ws/src/pro_lab_filters/config/scenarios/: correct_init.yaml  kidnapped.yaml  offset_1m.yaml  offset_5m.yaml  overconfident_wrong.yaml  q_high.yaml  q_low.yaml  r_high.yaml  r_low.yaml  underconfident.yaml  wrong_yaw_pi2.yaml
ws/src/pro_lab_filters/include/pro_lab_filters/: EKF.h  KF.h  LikelihoodField.h  PF.h  common.hpp  kidnap_tool.hpp  teleop_panel.hpp
ws/src/pro_lab_filters/launch/: all_in_one.launch.py  ekf_only.launch.py  filters.launch.py  kf_only.launch.py  pf_only.launch.py  sim_bridge.launch.py  wrong_init_experiment.launch.py
ws/src/pro_lab_filters/scripts/: amcl_init_pose.py  amcl_relay.py  auto_kidnapper.py  csv_logger.py  run_wrong_init_batch.sh
ws/src/pro_lab_filters/src/: cmd_vel_watchdog.cpp  ekf_lf_node.cpp  ekf_node.cpp  gz_truth_relay.cpp  kf_node.cpp  kidnap_tool.cpp  landmark_detector_node.cpp  map_odom_tf_publisher.cpp  map_republisher.cpp  metrics_node.cpp  pf_node.cpp  robot_teleporter.cpp  teleop_marker_node.cpp  teleop_panel.cpp  trajectory_player_node.cpp  truth_relay_node.cpp
